# BilliT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BilliC/: CMakeLists.txt
BilliC/sql/: Makefile  build.sql  init-companies.sql  init-services.sql  init-tickets.sql  init-user.sql  init-vehicle.sql  init.sh  init.sql  reset.sql
BilliC/sql/data/: bus_services.txt  companies.txt
BilliC/src/: CMakeLists.txt  auth.c  auth.h  command.c  company.c  company.h  company_db.c  company_db.h  db.c  db.h  main.c  prl.c  services.c  services.h  services_db.c  ticket.h  user.c  user.h  user_db.c  user_db.h
BilliT/: db.sqlite3  manage.py
BilliT/BilliT/: settings.py  urls.py  wsgi.py
BilliT/main/: views.py
BilliT/ticket/: admin.py  models.py
BilliT/ticket/migrations/: 0001_initial.py  0002_auto_20160108_0714.py
BilliT/user/: models.py  views.py
BilliT/user/migrations/: 0001_initial.py
doc/: BilliT-ERD.mwb
sql/: init-vehicle.sql  reset.sh
sql/data/: bus_services.txt
src/: CMakeLists.txt  auth.h  main.c  prl.c  services.c  services.h  services_db.c  services_db.h  user.c  user_db.h
